[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = pylint, py3, mypy

[testenv]
deps =
    pytest
    hypothesis
commands =
    pytest {posargs} test

[testenv:pylint]
deps = pylint
commands = pylint --exit-zero http_sensor http_sensor_ctl

[testenv:mypy]
basepython = python3
deps =
    mypy
commands =
    mypy    http_sensor_ctl/__init__.py \
            http_sensor/sensor.py

    ; --config-file=../../mypy.ini \
"""
