[metadata]
name = "http-sensor"
version = 0.0.1

[options]
packages = find:

install_requires =
  requests
  pidlockfile
  python-daemon
  kafka-python
  pyyaml
  psycopg2-binary

[options.entry_points]
console_scripts =
    http-sensor-ctl = http_sensor_ctl:main

# [options.packages.find] #optional
# include=pkg1, pkg2
# exclude=pk3, pk4
